--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,25 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "echo",
+            "label": "Project Label",
             "type": "shell",
-            "command": "echo Hello"
+            "command": "python3",
+            "args": [
+                "${file}"
+            ],
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            },
+            "options": {
+                "env": {
+                    "PYTHONIOENCODING": "UTF-8"
+                }
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
